--- a/public/assets/card.html
+++ b/public/assets/card.html
@@ -24,7 +24,13 @@ link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/c
                 <div>
 
                 </div class= "entry">
-                <h1 class ="pokemon-name"></h1>
+                <h1 class ="pokemon-name">"pokemons name"</h1>
+            <span class="pokemon-type">"pokemons type"</span>
+
+            <div class = "context">
+                <p>"pokedexentry"</p>
+            </div>
+
 
             </div>
 
