--- a/public/assets/main.html
+++ b/public/assets/main.html
@@ -1,17 +1,23 @@
 
-
 <div class="grid-container">
     
     <!-- WELCOME MESSAGE ACROSS TOP OF WEBPAGE -->
     <div class="Welcome">
     </div>
 
-    <!-- SEARCH BOX TO GET POKEMON -->
-    <div class="Search-Area">
+    <!-- LIST OF 151 POKEMON -->
+    <!-- clicked pokemon displays in display pokemon -->
+    <div class="List-Area">
+        <div class="list-group" id="list-tab" role="tablist">
+            <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Home</a>
+            <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Profile</a>
+            <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
+            <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
+          </div>
     </div>
 
 
-    <!-- DISPLAY POKEMON SEARCH FOR -->
+    <!-- DISPLAY POKEMON -->
     <div class="PokemonDisplay">
 
     </div>
