fixed some errors

--- a/public/assets/card.html
+++ b/public/assets/card.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>Pokemon Cards</title>
-<link rel="stylesheet" type="text/css" href="projects\gw-group-project-2\assets\pokemon.css"
-link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="pokemon.css">
 
 </head>
 <body>
@@ -28,7 +29,7 @@ link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/c
             <span class="pokemon-type">"pokemons type"</span>
 
             <div class = "context">
-                <p>"pokedexentry"</p>
+                <p>"pokedex entry"</p>
             </div>
 
 
